# minimal_cmake_project

./: CMakeLists.txt  deploy.sh  rename.sh
src/: CMakeLists.txt  main.cpp  project_name.cpp  utils.hpp
test/: CMakeLists.txt  project_name_benchmark.cpp  project_name_gtest.cpp  project_name_test.cpp
